--- a/v106/content/auswertung.tex
+++ b/v106/content/auswertung.tex
@@ -87,12 +87,11 @@ die zugehörigen Frequenzen überführen.
     & \multicolumn{2}{c}{$l = 28.4\unit{\centi\metre}$} & \multicolumn{2}{c}{$l = 78.4\unit{\centi\metre}$} \\
     \cmidrule(lr){2-3}\cmidrule(lr){4-5}
     %\midrule
-    {$\overline{T}_l \mathbin{/} \symup{s}$}        & 1.201 & 0.007 & 1.774 & 0.005 \\
-    {$\overline{T}_r \mathbin{/} \symup{s}$}        & 1.200 & 0.007 & 1.776 & 0.005 \\
-    {$\overline{T}_+ \mathbin{/} \symup{s}$}        & 1.226 & 0.004 & 1.780 & 0.005 \\
-    %{$\omega_l \mathbin{/} \symup{Hz}$}  & x.xxx & x.xxx & x.xxx & x.xxx \\
-    %{$\omega_r \mathbin{/} \symup{Hz}$}  & x.xxx & x.xxx & x.xxx & x.xxx \\
-    {$\omega_+ \mathbin{/} \symup{Hz}$}  & 5.124 & 0.019 & 3.530 & 0.009 \\
+    {$\overline{T}_l \mathbin{/} \symup{s}$}                & 1.201 & 0.007 & 1.774 & 0.005 \\
+    {$\overline{T}_r \mathbin{/} \symup{s}$}                & 1.200 & 0.007 & 1.776 & 0.005 \\
+    {$\overline{T}_+ \mathbin{/} \symup{s}$}                & 1.226 & 0.004 & 1.780 & 0.005 \\
+    {$\omega_+ \mathbin{/} \symup{Hz}$}                     & 5.124 & 0.019 & 3.530 & 0.009 \\
+    {$\omega_{+,\text{Theorie}} \mathbin{/} \symup{Hz}$}    & 5.876 & 0.01  & 3.537 & 0.002 \\
     \bottomrule
     \end{tabular}
 \end{table}    
