--- a/v106/content/diskussion.tex
+++ b/v106/content/diskussion.tex
@@ -1,2 +1,55 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+\begin{table}
+    \centering
+    \caption{Abweichung der Messwerte zur Theorie}
+    \sisetup{table-format=1.3}
+    \begin{tabular}{c S @{${}\pm{}$} S c S[table-format=2.3] @{${}\pm{}$} S[table-format=1.3] c}
+    \toprule
+    & \multicolumn{2}{c}{$l = 28.4\unit{\centi\metre}$} & \multicolumn{1}{c}{$\symup{\Delta}_\text{relativ}$} & \multicolumn{2}{c}{$l = 78.4\unit{\centi\metre}$} & \multicolumn{1}{c}{$\symup{\Delta}_\text{relativ}$}\\
+    \cmidrule(lr){2-3}\cmidrule(lr){4-4}\cmidrule(lr){5-6}\cmidrule(lr){7-7}
+    {$\omega_+ \mathbin{/} \unit{\hertz}$}                     & 5.124 & 0.019 &  & 3.530 & 0.009 & \\
+    {$\omega_{+,\text{Theorie}} \mathbin{/} \unit{\hertz}$}    & 5.876 & 0.01 & 12.8\% & 3.537 & 0.002 & 0.19\% \\
+    {$\omega_- \mathbin{/} \unit{\hertz}$}                     & 6.147 & 0.011 & & 3.834 & 0.010 & \\
+    {$\omega_{{-}\text{, Theorie}} \mathbin{/} \unit{\hertz}$} & 5.983 & 0.003 & 2.73\% & 3.566 & 0.001 & 7.52\% \\
+    {$\omega_s \mathbin{/} \unit{\hertz}$}                     & 1.023 & 0.007 & & 0.315 & 0.002 & \\
+    {$\omega_{{s}\text{, Theorie}} \mathbin{/} \unit{\hertz}$} & 0.107 & 0.011 & 857\% & 0.030 & 0.002 & 961\% \\
+    \bottomrule
+    \end{tabular}
+\end{table}
+
+
+Zunächst wird die gleichsinnige Schwingung diskutiert. Bei diesen Messungen ergibt sich für $l_1$ eine Abweichung 
+$\symup{\Delta}\omega_{+} = 12.8\%$ vom Theoriewert. Diese liegt nicht im Fehlerbereich des gemessenen Wertes und kann durch die Überlänge des Pendels entstehen, da die Masse sehr
+weit oben aufgehangen ist (siehe \autoref{fig:Aufbau2}).\\ Für die Massenlage $l_2$ ergibt sich lediglich eine prozentuale Abweichung $\symup{\Delta}\omega_{+} = 0.19\%$. Dieser Wert
+liegt im Rahmen des errechneten Fehlers und ist somit qualitativ gut. Es war allerdings zu erwarten das dieser Wert genauer ist, da die Masse hier sehr weit unten aufgehangen war
+und das Pendel dadurch genauer wird. 
+
+
+Betrachtet man die Federkonstante fällt auf, dass diese für die unterschiedlichen Längen einen anderen Wert ergibt. Dies ergibt sich, da man die Federkonstante aus den experimentell
+bestimmten fehlerbehafteten Werten errechnen soll. In Wahrheit sollte die Federkonstante aber gleich sein, da bei den Messungen jeweils die gleiche Feder genutzt wurde. Daher ist die 
+Aussagekraft der Theoriewerte zweifelhaft.
+
+
+Allerdings ist die Kopplungskonstante der genutzten Feder nicht angegeben und sollte aus gemessenen fehlerbehafteten Werten bestimmt werden, wodurch der Theoriewert nicht korrekt bestimmt 
+werden konnte.
+
+Zur gegensinnigen Schwingung der Länge $l_1$ lässt sich die Abweichung $\symup{\Delta}\omega_{-} = 2.73\%$ bestimmen. Diese Abweichung liegt um einen kleinen Wert nicht im Fehlerbereich.
+Aufgrund der kleinen Abweichung des Wertes zur Länge $l_1$ kann man die Messung als qualitativ annehmen. Bei der Länge $l_2$ liegt eine Abweichung von $\symup{\Delta}\omega_{-} = 7.53\%$
+vor. Diese ist trotz des besseren Pendels schlechter im vergleich zur ersten Messung.
+
+Die Schwebefrequenz weicht für beide Längen um über 800\% ab. Da sich der Theoriewert der Schwebungsfrequenzen aus der Differenz von $\omega_-$ und $\omega_+$ zusammensetzt entsteht 
+aus den zunächst im Rahmen der Messungenauigkeit akzeptablen Abweichungen der einzelnen Werte eine große Abweichung der Schwebungsfrequenz. Berechnet man hingegen aus den experimentell
+bestimmen Werten $\omega_-$ und $\omega_+$ die Schwebungsfrequenzen, ergeben sich sehr geringe Abweichungen von $\symup{\Delta}\omega_{s} = 0.02\%$ für $l_1$ und $\symup{\Delta}\omega_{s} = 3.31\%$ 
+für $l_2$. 
+
+
+Allgemein liegen in diesem Experiment noch Fehlerquellen vor. Durch händische Auslenkung ist es nicht möglich beide Pendel gleichmäßig auszulenken und sich genau im Rahmen der
+Kleinwinkelnäherung aufzuhalten. Dazu muss die Schwingungsdauer durch eine Stoppuhr mit optischen abpassen der maximalen Auslenkung bestimmt werden. Daher kommen Fehler durch 
+Reaktionszeit und durch Erkennungsungenauigkeit dazu. Außerdem war das Pendel leicht gekrümmt und ist somit auf nicht perfekt in einer Ebene geschwungen wodurch weitere Abweichungen 
+bei der Schwingungs- und Schwebedauer hinzukommen.
+
+
+Unter betrachtung dieser Fehlerquellen sind, bis auf die bereits diskutierte Abweichung der Schwebefrequenz, alle Abweichungen akzeptabl bestimmt worden.  
+
+
