--- a/v106/content/diskussion.tex
+++ b/v106/content/diskussion.tex
@@ -2,7 +2,7 @@
 \label{sec:Diskussion}
 \begin{table}
     \centering
-    \caption{Abweichung der Messwerte zur Theorie}
+    \caption{Zusammenfassung der zu bestimmenden Werte und relative Abweichung zur Theorie.}
     \sisetup{table-format=1.3}
     \begin{tabular}{c S @{${}\pm{}$} S c S[table-format=2.3] @{${}\pm{}$} S[table-format=1.3] c}
     \toprule
@@ -19,37 +19,28 @@
 \end{table}
 
 
-Zunächst wird die gleichsinnige Schwingung diskutiert. Bei diesen Messungen ergibt sich für $l_1$ eine Abweichung 
+Zunächst wird die gleichsinnige Schwingung diskutiert. Bei diesen Messungen ergibt sich für $l_1$ eine relative Abweichung 
 $\symup{\Delta}\omega_{+} = 12.8\%$ vom Theoriewert. Diese liegt nicht im Fehlerbereich des gemessenen Wertes und kann durch die Überlänge des Pendels entstehen, da die Masse sehr
 weit oben aufgehangen ist (siehe \autoref{fig:Aufbau2}).\\ Für die Massenlage $l_2$ ergibt sich lediglich eine prozentuale Abweichung $\symup{\Delta}\omega_{+} = 0.19\%$. Dieser Wert
-liegt im Rahmen des errechneten Fehlers und ist somit qualitativ gut. Es war allerdings zu erwarten das dieser Wert genauer ist, da die Masse hier sehr weit unten aufgehangen war
-und das Pendel dadurch genauer wird. 
+liegt im Rahmen des errechneten Fehlers und ist somit qualitativ gut, was zu erwarten war, da die Masse hier sehr weit unten aufgehangen wurde.
 
 
 Betrachtet man die Federkonstante fällt auf, dass diese für die unterschiedlichen Längen einen anderen Wert ergibt. Dies ergibt sich, da man die Federkonstante aus den experimentell
-bestimmten fehlerbehafteten Werten errechnen soll. In Wahrheit sollte die Federkonstante aber gleich sein, da bei den Messungen jeweils die gleiche Feder genutzt wurde. Daher ist die 
-Aussagekraft der Theoriewerte zweifelhaft.
+bestimmten, fehlerbehafteten Werten errechnen soll. In Wahrheit sollte die Federkonstante bei beiden Messungen jedoch gleich sein, da jeweils die gleiche Feder 
+genutzt wurde. Dies führt dazu, dass die Theoriewerte, die mittels der Federkonstante bestimmt wurden, zweifelhaft sind.
 
+Zur gegensinnigen Schwingung der Länge $l_1$ lässt sich eine Abweichung von $\symup{\Delta}\omega_{-} = 2.73\%$ der Messung zum Theoriewert bestimmen. 
+Dies liegt zwar nicht im theoretischen Fehlerbereich, ist jedoch im Rahmen der Messgenauigkeit ein akzeptabler Wert.
+Bei der Länge $l_2$ liegt eine relative Abweichung von $\symup{\Delta}\omega_{-} = 7.53\%$ vor, obwohl bei dem längeren Pendel bessere Werte zu erwarten wären. 
+Mögliche Gründe für diese Abweichung sind am Ende des Abschnitts aufgelistet.
 
-Allerdings ist die Kopplungskonstante der genutzten Feder nicht angegeben und sollte aus gemessenen fehlerbehafteten Werten bestimmt werden, wodurch der Theoriewert nicht korrekt bestimmt 
-werden konnte.
+Die Schwebungsfrequenz weicht für beide Längen um über 800\% ab. Dies hat den Grund, dass sich der Theoriewert der Schwebungsfrequenzen aus der Differenz 
+von $\omega_-$ und $\omega_+$ zusammensetzt, die beide bereits gröbere Abweichungen zu den jeweiligen Theoriewerten vorweisen. 
+Berechnet man hingegen aus den experimentell bestimmen Werten $\omega_-$ und $\omega_+$ die Schwebungsfrequenzen, 
+ergeben sich sehr geringe relative Abweichungen von $\symup{\Delta}\omega_{s} = 0.02\%$ für $l_1$ und $\symup{\Delta}\omega_{s} = 3.31\%$ für $l_2$. 
 
-Zur gegensinnigen Schwingung der Länge $l_1$ lässt sich die Abweichung $\symup{\Delta}\omega_{-} = 2.73\%$ bestimmen. Diese Abweichung liegt um einen kleinen Wert nicht im Fehlerbereich.
-Aufgrund der kleinen Abweichung des Wertes zur Länge $l_1$ kann man die Messung als qualitativ annehmen. Bei der Länge $l_2$ liegt eine Abweichung von $\symup{\Delta}\omega_{-} = 7.53\%$
-vor. Diese ist trotz des besseren Pendels schlechter im vergleich zur ersten Messung.
-
-Die Schwebefrequenz weicht für beide Längen um über 800\% ab. Da sich der Theoriewert der Schwebungsfrequenzen aus der Differenz von $\omega_-$ und $\omega_+$ zusammensetzt entsteht 
-aus den zunächst im Rahmen der Messungenauigkeit akzeptablen Abweichungen der einzelnen Werte eine große Abweichung der Schwebungsfrequenz. Berechnet man hingegen aus den experimentell
-bestimmen Werten $\omega_-$ und $\omega_+$ die Schwebungsfrequenzen, ergeben sich sehr geringe Abweichungen von $\symup{\Delta}\omega_{s} = 0.02\%$ für $l_1$ und $\symup{\Delta}\omega_{s} = 3.31\%$ 
-für $l_2$. 
-
-
-Allgemein liegen in diesem Experiment noch Fehlerquellen vor. Durch händische Auslenkung ist es nicht möglich beide Pendel gleichmäßig auszulenken und sich genau im Rahmen der
-Kleinwinkelnäherung aufzuhalten. Dazu muss die Schwingungsdauer durch eine Stoppuhr mit optischen abpassen der maximalen Auslenkung bestimmt werden. Daher kommen Fehler durch 
-Reaktionszeit und durch Erkennungsungenauigkeit dazu. Außerdem war das Pendel leicht gekrümmt und ist somit auf nicht perfekt in einer Ebene geschwungen wodurch weitere Abweichungen 
-bei der Schwingungs- und Schwebedauer hinzukommen.
-
-
-Unter betrachtung dieser Fehlerquellen sind, bis auf die bereits diskutierte Abweichung der Schwebefrequenz, alle Abweichungen akzeptabl bestimmt worden.  
-
-
+Allgemein liegen in diesem Experiment einige potentielle Fehlerquellen vor. Durch händische Auslenkung ist es nicht möglich beide Pendel gleichmäßig auszulenken und sich
+genau im Bereich der Kleinwinkelnäherung aufzuhalten. Dazu wird die Schwingungsdauer mit einer Stoppuhr durch optisches Abpassen der maximalen Auslenkung bestimmt,
+was zu ebenfalls zu einem Fehler führen kann. Des Weiteren war der Stab eines der verwendeten Pendel leicht gekrümmt, weshalb die Schwingung mitunter nicht in einer
+Ebene stattfand, was ebenfalls eine mögliche Ungenauigkeit bewirken könnte.
+Unter Betrachtung dieser Fehlerquellen, lassen sich die Abweichungen der Messwerte --mit Ausnahme jener der Schwebungsfrequenz-- nachvollziehen.
