--- a/v106/content/theorie.tex
+++ b/v106/content/theorie.tex
@@ -44,7 +44,7 @@ mit speziellen Anfangsbedigungen unterschieden, die im folgenden diskutiert werd
     kinetische Energie über die Kopplungsfeder an das zuerst ruhende Pendel. Dadurch wird die Schwingungsamplitude des ausgelenkten Pendels kontinuierlich kleiner, während
     die des zuerst Ruhenden zunimmt. Hat das ausgelenkte Pendel seine Energie vollständig abgegeben, blebt es stehen und die Amplitude des zweiten Pendels erreicht ihr Maximum.
     Anschließend beginnt der Prozess mit nun getauschten Ausgangspositionen von vorne. Dieses Phänomen wird als Schwebung bezeichnet. Die Schwebungsdauer $T_{\text{S}}$ bezeichnet 
-    die Dauer einer Periode dieses Prozesses, also die Zeit von Ruhelage bis ernueter Ruhelage eines Pendels. Die Schwingungsfrequenz
+    die Dauer einer Periode dieses Prozesses, also die Zeit von Ruhelage bis ernueter Ruhelage eines Pendels. Die Schwebungsfrequenz
     \begin{gather}
         \label{eqn:Schwebung}
         \omega_{\text{S}} = \omega_- - \omega_+ \qquad \text{und die Dauer} \qquad T_{\text{S}}  = \frac{T_+ \cdot T_-}{T_+ - T_-}
