iwas von 106 noch vergessen zu pushen oder so ka

--- a/v106/content/auswertung.tex
+++ b/v106/content/auswertung.tex
@@ -67,15 +67,15 @@ An einigen Stellen werden Schwingungsdauern in Kreisfrequenzen umgerechnet. Dies
     \label{eqn:DeltaOmega}
     \symup{\Delta}\omega = \frac{2\pi}{T^2}\symup{\Delta}T
 \end{equation}
-der Kreisfrequenz, der sich aus der Gaußschen Fehlerfortpflantung ergibt.
+der Kreisfrequenz, der sich aus der Gaußschen Fehlerfortpflanzung ergibt.
 
 \subsection{Einzelpendel und gleichsinnige Schwingung}
 \label{subsec:Gleichsinnig}
 Die Schwingungsdauern der Einzelpendel und der gleichsinnigen Schwingung können zusammen betrachtet werden, da die Kopplungsfeder bei der gleichsinnigen Schwingung 
-keinen Einfluss auf die Dynamik hat. Gemessenen wurden die Schwingungsdauern $T_l, T_r$ und $T_+$ aus \autoref{tab:Mess1} und \autoref{tab:Mess2}.
-Der Index l beschreibt jeweils das linke Pendel, r bezeichnet das rechte Pendel. Zu den Längen $l_1$ und $l_2$ lassen sich die 
+keinen Einfluss auf die Dynamik hat. Gemessen wurden die Schwingungsdauern $T_l, T_r$ und $T_+$ aus \autoref{tab:Mess1} und \autoref{tab:Mess2}.
+Der Index $l$ beschreibt jeweils das linke Pendel, $r$ bezeichnet das rechte Pendel. Zu den Längen $l_1$ und $l_2$ lassen sich die 
 theoretisch vorhergesagten Frequenzen der Pendel errechnen. Mit \autoref{eqn:omega} ergeben sich die theoretischen Frequenzen $\omega_{+1\text{, Theorie}} = (5.87\pm 0.01)\unit{\hertz}$ und 
-$\omega_{+2\text{, Theorie}} = (3.537\pm 0.002)\unit{\hertz}$. Aus den gemessenen Werten wird zunächst der Mittelwert gebildet. Die Fehler des Mittelwerts ergeben sich nach \autoref{eqn:MWFehler}.
+$\omega_{+2\text{, Theorie}} = (3.537\pm 0.002)\unit{\hertz}$. Aus den gemessenen Werten wird zunächst der Mittelwert gebildet. Die Fehler des Mittelwertes ergeben sich nach \autoref{eqn:MWFehler}.
 Daraus folgen die fehlerbehafteten Schwingungsdauern $\overline{T_l}$, $\overline{T_r}$ und $\overline{T_+}$ für beide Pendellängen. Diese kann man durch \autoref{eqn:omega} in 
 die zugehörigen Frequenzen überführen.
 \begin{table}
@@ -98,7 +98,7 @@ die zugehörigen Frequenzen überführen.
 
 \subsection{Gegensinnige Schwingung}
 \label{subsec:Gegensinnig}
-Die Theoriwerte der Frequenzen $\omega_-$ der gegensinnigen Schwingung lassen sich mittels \autoref{eqn:omega_Gegensinnig} berechnen. Dabei wurde für die Kopplungskonstante $K$ 
+Die Theoriewerte der Frequenzen $\omega_-$ der gegensinnigen Schwingung lassen sich mittels \autoref{eqn:omega_Gegensinnig} berechnen. Dabei wurde für die Kopplungskonstante $K$ 
 der experimentell ermittelte Wert eingestzt. Es folgt mit der gaußschen Fehlerfortpflanzung
 \begin{equation*}
     \label{eqn:DeltaOmegaMinus}
