--- a/v106/content/diskussion.tex
+++ b/v106/content/diskussion.tex
@@ -21,12 +21,12 @@
 
 Zunächst wird die gleichsinnige Schwingung diskutiert. Bei diesen Messungen ergibt sich für $l_1$ eine relative Abweichung 
 $\symup{\Delta}\omega_{+} = 12.8\%$ vom Theoriewert. Diese liegt nicht im Fehlerbereich des gemessenen Wertes und kann durch die Überlänge des Pendels entstehen, da die Masse sehr
-weit oben aufgehangen ist (siehe \autoref{fig:Aufbau2}).\\ Für die Massenlage $l_2$ ergibt sich lediglich eine prozentuale Abweichung $\symup{\Delta}\omega_{+} = 0.19\%$. Dieser Wert
-liegt im Rahmen des errechneten Fehlers und ist somit qualitativ gut, was zu erwarten war, da die Masse hier sehr weit unten aufgehangen wurde.
+weit oben aufgehängt ist (siehe \autoref{fig:Aufbau2}).\\ Für die Massenlage $l_2$ ergibt sich lediglich eine prozentuale Abweichung $\symup{\Delta}\omega_{+} = 0.19\%$. Dieser Wert
+liegt im Rahmen des errechneten Fehlers und ist somit qualitativ gut, was zu erwarten war, da die Masse hier sehr weit unten aufgehängt wurde.
 
 
-Betrachtet man die Federkonstante fällt auf, dass diese für die unterschiedlichen Längen einen anderen Wert ergibt. Dies ergibt sich, da man die Federkonstante aus den experimentell
-bestimmten, fehlerbehafteten Werten errechnen soll. In Wahrheit sollte die Federkonstante bei beiden Messungen jedoch gleich sein, da jeweils die gleiche Feder 
+Betrachtet man die Federkonstante, fällt auf, dass diese für die unterschiedlichen Längen einen anderen Wert ergibt. Dies ergibt sich, da man die Federkonstante aus den experimentell
+bestimmten, fehlerbehafteten Werten errechnen soll. In Wahrheit sollte die Federkonstante bei beiden Messungen jedoch gleich sein, da auch die gleiche Feder 
 genutzt wurde. Dies führt dazu, dass die Theoriewerte, die mittels der Federkonstante bestimmt wurden, zweifelhaft sind.
 
 Zur gegensinnigen Schwingung der Länge $l_1$ lässt sich eine Abweichung von $\symup{\Delta}\omega_{-} = 2.73\%$ der Messung zum Theoriewert bestimmen. 
@@ -41,6 +41,6 @@ ergeben sich sehr geringe relative Abweichungen von $\symup{\Delta}\omega_{s} = 
 
 Allgemein liegen in diesem Experiment einige potentielle Fehlerquellen vor. Durch händische Auslenkung ist es nicht möglich beide Pendel gleichmäßig auszulenken und sich
 genau im Bereich der Kleinwinkelnäherung aufzuhalten. Dazu wird die Schwingungsdauer mit einer Stoppuhr durch optisches Abpassen der maximalen Auslenkung bestimmt,
-was zu ebenfalls zu einem Fehler führen kann. Des Weiteren war der Stab eines der verwendeten Pendel leicht gekrümmt, weshalb die Schwingung mitunter nicht in einer
+was ebenfalls zu einem Fehler führen kann. Des Weiteren war der Stab eines der verwendeten Pendel leicht gekrümmt, weshalb die Schwingung mitunter nicht in einer
 Ebene stattfand, was ebenfalls eine mögliche Ungenauigkeit bewirken könnte.
 Unter Betrachtung dieser Fehlerquellen, lassen sich die Abweichungen der Messwerte --mit Ausnahme jener der Schwebungsfrequenz-- nachvollziehen.
