--- a/v106/content/durchfuehrung.tex
+++ b/v106/content/durchfuehrung.tex
@@ -16,11 +16,11 @@ Für diesen Versuch benötigt man zwei identische Pendel (siehe \autoref{fig:Auf
 	\caption{Aufbau des Versuchs: Zwei Stabpendel mit höhenverstellbaren Massen.}
 	\label{fig:Aufbau1}
 \end{figure}
-Zuerst wird die Schwingungsdauer eines einfachen Pendels bestimmt. Dazu werden fünf Schwingungsdauern gemessen um den Fehler der Zeitmessung möglichst klein zu halten.
+Zuerst wird die Schwingungsdauer eines einfachen Pendels bestimmt. Dazu werden fünf Schwingungsdauern gemessen, um den Fehler der Zeitmessung möglichst klein zu halten.
 Dies wird zehn mal an beiden Pendeln durchgeführt, um auch die möglichen Unterschiede der beiden Einzelpendel zueinander gemessen zu haben. 
 
 
-Anschließend wird die Kopplungsfeder an die Pendel angebracht, wie es in \autoref{fig:Aufbau2} zu sehen ist. 
+Anschließend wird die Kopplungsfeder an die Pendel angebracht, wie in \autoref{fig:Aufbau2} zu sehen ist. 
 \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{content/Gekoppelt.jpg}
@@ -35,8 +35,8 @@ Schwingung gemessen.
 
 
 Zuletzt wird die gekoppelte Schwingung beziehungsweise der Schwebungsfall untersucht. Eines der Pendel soll sich in Ruhelage befinden während das Andere ausgelenkt wird. 
-\autoref{fig:Schwebung} stellt die beschrieben Auslenkung dar. Hier wird die Schwebungssdauer von einer Ruhelage eines Pendels bis zu seiner nächsten bestimmt. Dabei muss sehr
-genau beobachtet werden wann die Ruhelage eintritt, da kurz vor der Ruhelage noch sehr kleine Schwingungen ausgeübt werden. Zu dieser Messung reicht es, eine Periode der Schwebung
-zu messen, da diese ausreichend lang ist. Zusätzlich wird die Schwingungsdauer eines Pendels gemessen. Diese ist beim Schwebungsfall bei einem der Pendel zwisches dessen Ruhelagen zu messen. Je nach länge 
+\autoref{fig:Schwebung} stellt die beschriebene Auslenkung dar. Hier wird die Schwebungsdauer von einer Ruhelage eines Pendels bis zu seiner Nächsten bestimmt. Dabei muss sehr
+genau beobachtet werden, zu welchem Zeitpunkt die Ruhelage eintritt, da kurz vor der Ruhelage noch sehr kleine Schwingungen ausgeübt werden. Zu dieser Messung reicht es, eine Periode der Schwebung
+zu messen, da diese ausreichend lang ist. Zusätzlich wird die Schwingungsdauer eines Pendels gemessen. Diese ist beim Schwebungsfall bei einem der Pendel zwischen dessen Ruhelagen zu messen. Je nach länge 
 des Pendel können hier nur 3-5 Schwingungsdauer gemessen werden, da sich das Pendel nach wenigen Schwingungen wieder in Ruhelage begibt. Es sollen ebenfalls 10 Messungen der Schwing- und Schwebedauern
 durchgeführt werden. 
