--- a/v106/content/theorie.tex
+++ b/v106/content/theorie.tex
@@ -22,17 +22,17 @@ Damit ergibt sich ein System gekoppelter Differentialgleichungen
 \end{align*}
 für die Auslenkwinkel $\phi_1$ und $\phi_2$ der beiden Pendel.$J$ ist das Trägheitsmoment der Pendel. Die Lösungen dieses Systems lassen sich als Überlagerung von Eigenschwingungen der beiden
 Pendel darstellen. Es ergibt sich für jedes Pendel eine harmonische Schwingung mit den Frequenzen $\omega_1$ und $\omega_2$. Wenn $\alpha_1$ und $\alpha_2$ die Auslenkwinkel der
-Pendel beschreiben, ist durch die Anfangsbedigungen $\alpha(t = 0)$ und $\dot\alpha(t = 0)$ eine eindeutige Lösung bestimmt. Unter diesen Lösungen werden verschiedene Schwingungsarten
-mit speziellen Anfangsbedigungen unterschieden, die im folgenden diskutiert werden.
+Pendel beschreiben, ist durch die Anfangsbedingungen $\alpha(t = 0)$ und $\dot\alpha(t = 0)$ eine eindeutige Lösung bestimmt. Unter diesen Lösungen werden verschiedene Schwingungsarten
+mit speziellen Anfangsbedingungen unterschieden, die im Folgenden diskutiert werden.
 
 \begin{itemize}
     \item \textbf{Gleichsinnige Schwingung:} $\alpha_1 = \alpha_2$ \\
-    Bei der gleichsinnigen Schwingung (\autoref{fig:Gleichsinnig}) werden beide Pendel um den Winkel $\alpha_1 = \alpha_2$ ausgelenkt. Die Pendel schwingen nun im gleichen Takt und beeinflussen sich nicht.
+    Bei der gleichsinnigen Schwingung (\autoref{fig:Gleichsinnig}) werden beide Pendel um den gleichen Winkel $\alpha_1 = \alpha_2$ ausgelenkt. Die Pendel schwingen nun im Takt und beeinflussen sich nicht.
     Es wird also keine Kraft über die Feder übertragen. Die Schwingungsfrequenz entspricht der eines einzelnen Pendels (vgl. \autoref{eqn:omega}) und wird mit $\omega_+$ bezeichnet.
 
     \item \textbf{Gegensinnige Schwingung:} $\alpha_1 = -\alpha_2$ \\
     Bei dieser Schwingungsvariante (\autoref{fig:Gegensinnig}) werden die Pendel um den gleichen Winkel in entgegengesetzte Richtungen ausgelenkt. Über die Feder wirken nun betragsmäßig gleiche,
-    entgegengerichtete Kräfte auf die Pendel. Dies hat zur Folge, dass die Pendel symmetrisch zu der Achse zwischen den Pendeln schwingen. Die Schwingungsfrequenz 
+    aber entgegengerichtete Kräfte auf die Pendel. Dies hat zur Folge, dass die Pendel symmetrisch zu der Achse zwischen den Pendeln schwingen. Die Schwingungsfrequenz 
     \begin{gather}
         \label{eqn:omega_Gegensinnig}
         \omega_- = \sqrt{\frac{g + 2K}{l}}
@@ -40,14 +40,14 @@ mit speziellen Anfangsbedigungen unterschieden, die im folgenden diskutiert werd
     und die daraus resultierende Schwingungsdauer $T_-$ sind nun abhängig von der Federkonstante $K$. 
     
     \item \textbf{Gekoppelte Schwingung:} $\alpha_1 = 0, \, \alpha_2 \neq 0$ \\
-    Für die gekoppelte Schwingung --auch Schwebefall genannt-- (\autoref{fig:Schwebung}) wird nur ein Pendel aus der Ruhelage ausgelenkt. Das Ausgelenkte Pendel fängt an zu schwingen und überträgt seine 
+    Für die gekoppelte Schwingung --auch Schwebefall genannt-- (\autoref{fig:Schwebung}) wird nur ein Pendel aus der Ruhelage ausgelenkt. Das ausgelenkte Pendel fängt an zu schwingen und überträgt seine 
     kinetische Energie über die Kopplungsfeder an das zuerst ruhende Pendel. Dadurch wird die Schwingungsamplitude des ausgelenkten Pendels kontinuierlich kleiner, während
-    die des zuerst Ruhenden zunimmt. Hat das ausgelenkte Pendel seine Energie vollständig abgegeben, blebt es stehen und die Amplitude des zweiten Pendels erreicht ihr Maximum.
+    die des zuerst Ruhenden zunimmt. Hat das ausgelenkte Pendel seine Energie vollständig abgegeben, bleibt es stehen und die Amplitude des zweiten Pendels erreicht ihr Maximum.
     Anschließend beginnt der Prozess mit nun getauschten Ausgangspositionen von vorne. Dieses Phänomen wird als Schwebung bezeichnet. Die Schwebungsdauer $T_{\text{S}}$ bezeichnet 
-    die Dauer einer Periode dieses Prozesses, also die Zeit von Ruhelage bis ernueter Ruhelage eines Pendels. Die Schwebungsfrequenz
+    die Dauer einer Periode dieses Prozesses, also die Zeit von Ruhelage bis erneuter Ruhelage eines Pendels. Die Schwebungsfrequenz
     \begin{gather}
         \label{eqn:Schwebung}
-        \omega_{\text{S}} = \omega_- - \omega_+ \qquad \text{und die Dauer} \qquad T_{\text{S}}  = \frac{T_+ \cdot T_-}{T_+ - T_-}
+        \omega_{\text{S}} = \omega_- - \omega_+ \qquad \text{und die Schwebungsdauer} \qquad T_{\text{S}}  = \frac{T_+ \cdot T_-}{T_+ - T_-}
     \end{gather}
     lassen sich durch die Schwingungsdauern $T_+$ und $T_-$ der beiden anderen Fälle bestimmen.
     Aus den genannten Frequenzen kann ebenfalls die Federkonstante
