erster plot, bissl rechnen

--- a/lit.bib
+++ b/lit.bib
@@ -47,10 +47,32 @@
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1712437/mod_resource/content/2/V106.pdf},
 }
 
+@online{v203,
+	title        = {V203 - Verdampfungswärme und Dampfdruck-Kurve},
+	organization = {TU Dortmund},
+	urldate      = {2021-12-07},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1712438/mod_resource/content/1/V203.pdf},
+}
+
+@online{v206,
+	title        = {V206 - Die Wärmepumpe},
+	organization = {TU Dortmund},
+	urldate      = {2021-12-07},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1884592/mod_resource/content/1/V206.pdf},
+}
+
 @book{Demtröder_Exp_P_1,
 	author       = {Professor Dr. Wolfgang Demtröder},
 	title        = {Experimentalphysik 1 Mechanik und Wärme},
 	publisher    = {Springer},
 	date         = {2021-11-24},
     edition      = {4}
+}
+
+@book{DasIngenieurwissen,
+title = {Das Ingenieurwissen},
+author = {Czichos, Horst and Hennecke, Manfred},
+year = {2012},
+isbn = {978-3-642-22850-6},
+publisher = {Springer Verlag},
 }
