--- a/v206/content/durchfuehrung.tex
+++ b/v206/content/durchfuehrung.tex
@@ -4,9 +4,9 @@ Zur Durchführung des Versuchs ist ein Aufbau notwendig, der in \autoref{fig:Auf
 Die Wärmepumpe ist in zwei Teilbereiche gegliedert. In den beiden Bereichen befindet sich je ein thermisch isoliertes Gefäß (Reservoir), ein Digital-Thermometer und 
 ein Manometer. Die Reservoire werden mit Wasser befüllt. Im \dq kalten\dq\: Bereich (links) wird die Temperatur $T_2$ des Wassers und der Druck $p_a$ im Inneren der Rohrleitung 
 gemessen. Im \dq warmen\dq\: Bereich bezeichnen $T_1$ und $p_b$ die Temperatur des Reservoirs und den Druck in der Leitung. Das Drosselventil zwischen den Teilbereichen regelt 
-die Durchflussmenge des Transportgases anhand der Temperaturdifferenz. Das verwendete Gas ist Dichlordifluormethan ($Cl_2F_2C$). Der Kompressor dient zur Erzeugung des 
+die Durchflussmenge des Transportgases anhand der Temperaturdifferenz. Das verwendete Gas ist Dichlordifluormethan ($\text{Cl}_2\text{F}_2\text{C}$). Der Kompressor dient zur Erzeugung des 
 Druckunterschieds in den beiden Teilbereichen. Seine momentane Leistungsaufnahme kann am Leistungsmesser (Wattmeter) abgelesen werden. In den isolierten Gefäßen ist ein Rührmotor 
-installiert, der eine Vermischung des Wassers gewährleistet, damit eine möglichst homogene Temperaturverteilung in diesem gegeben ist. Ein \dq Reiniger\dq und eine 
+installiert, der eine Vermischung des Wassers gewährleistet, damit eine möglichst homogene Temperaturverteilung in diesem gegeben ist. Ein \dq Reiniger\dq \: und eine 
 Steuerungsvorrichtung sorgen dafür, dass das verflüssigte Transportmedium von Gasresten getrennt wird und keine Flüssigkeit in den Kompressor gelangt. Diese Apparaturen sind 
 nicht in \autoref{fig:Aufbau_Skizze} zu sehen. In \autoref{fig:Aufbau_real} sind die beschriebenen Geräte und deren Anordnung im realen Versuchsaufbau zu sehen.
 
