--- a/v206/content/auswertung.tex
+++ b/v206/content/auswertung.tex
@@ -1,12 +1,36 @@
 \section{Auswertung}
 \label{sec:Auswertung}
 
-\begin{figure}
+\begin{table}
   \centering
-  \includegraphics{plot.pdf}
-  \caption{Plot.}
-  \label{fig:plot}
-\end{figure}
-
-
-Siehe \autoref{fig:plot}!
+  \caption{Gemessene Werte für Temperatur, Druck und Leistung.}
+  \label{tab:Mess1}
+  \begin{tabular}{S[table-format=2] S[table-format=2.1] S S[table-format=1.1] S S[table-format=3]}
+      \toprule
+      {$t \mathbin{/} \text{min}$} & {$T_{\text{kalt}} \mathbin{/} \unit{\degreeCelsius}$} &%
+      {$T_{\text{warm}} \mathbin{/} \unit{\degreeCelsius}$} & {$p_{\text{kalt}} \mathbin{/} \unit{\bar}$} &%
+      {$p_{\text{warm}} \mathbin{/} \unit{\bar}$} & {$P \mathbin{/} \unit{\watt}$} \\
+      \midrule
+       1 & 21.7 & 23.0 & 2.6 &  7.0 & 170 \\
+       2 & 21.4 & 23.7 & 2.8 &  7.5 & 175 \\
+       3 & 20.3 & 25.0 & 3.0 &  7.7 & 190 \\
+       4 & 18.9 & 26.4 & 3.1 &  8.0 & 195 \\
+       5 & 17.1 & 28.2 & 3.2 &  8.5 & 200 \\
+       6 & 15.4 & 29.9 & 3.2 &  8.9 & 205 \\
+       7 & 13.6 & 31.7 & 3.2 &  9.2 & 200 \\
+       8 & 12.0 & 33.5 & 3.2 &  9.5 & 200 \\
+       9 & 10.4 & 35.0 & 3.2 & 10.0 & 205 \\
+      10 &  8.8 & 36.8 & 3.2 & 10.3 & 210 \\
+      11 &  7.0 & 38.4 & 3.2 & 10.6 & 210 \\
+      12 &  5.7 & 40.1 & 3.2 & 11.0 & 210 \\
+      13 &  4.3 & 41.6 & 3.2 & 11.4 & 210 \\
+      14 &  3.2 & 43.0 & 3.2 & 11.7 & 215 \\
+      15 &  2.5 & 44.3 & 3.2 & 12.0 & 210 \\
+      16 &  1.8 & 45.7 & 3.2 & 12.4 & 210 \\
+      17 &  1.2 & 46.9 & 3.2 & 12.7 & 210 \\
+      18 &  0.7 & 48.1 & 3.2 & 13.0 & 210 \\
+      19 &  0.4 & 49.2 & 3.2 & 13.4 & 205 \\
+      20 &  0.1 & 50.2 & 3.2 & 13.6 & 205 \\
+      \bottomrule
+      \end{tabular}
+  \end{table}
